// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScreenHeader renders children properly 1`] = `
<Styled(View)>
  <Styled(Text) />
  <Styled(View)>
    <MockChild />
  </Styled(View)>
</Styled(View)>
`;

exports[`ScreenHeader renders correctly 1`] = `
<Styled(View)>
  <Styled(Text) />
  <Styled(View) />
</Styled(View)>
`;

exports[`ScreenHeader renders correctly 2`] = `
<Styled(View)>
  <BackButton
    color="#000000"
    onPress={[Function]}
    style={
      Object {
        "marginRight": 10,
      }
    }
  />
  <Styled(Text)>
    title
  </Styled(Text)>
  <Styled(View) />
</Styled(View)>
`;
